<resources>
    <string name="app_name">FCT</string>

    <string name="nextVisitsFragment_title">Próximas visitas</string>
    <string name="studentsFragment_title">Alumnos</string>
    <string name="companiesFragment_title">Empresas</string>
    <string name="visitsFragment_title">Visitas</string>
    <string name="settingsFragment_title">Ajustes</string>
    <string name="aboutMeActivity_title">Acerca de</string>

    <string name="formStudentFragmenr_title">Alumno</string>
    <string name="formCompanyFragment_title">Empresa</string>
    <string name="formVisitFragment_title">Visita</string>

    <string name="activity_main_header_lblUserName">User</string>
    <string name="activity_main_header_email">example@gmail.com</string>
    <string name="list_student_empty_text">No hay alumnos todavía</string>
    <string name="list_companies_empty_text">No hay empresas todavía</string>
    <string name="list_visits_empty_text">No hay visitas todavía</string>
    <string name="companies_item_img_dimensionRatio">1:1</string>
    <string name="visits_item_timeSeparator">-</string>
    <string name="txtNameLayout_hint">Nombre</string>
    <string name="txtPhoneLayout_hint">Telefono</string>
    <string name="txtEmailLayout_hint">Email</string>
    <string name="txtGradeLayout_hint">Curso</string>
    <string name="txtCompanyLayout_hint">Empresa</string>
    <string name="txtNameTutorLayout_hint">Nombre del Tutor</string>
    <string name="txtPhoneTutorLayout_hint">Telefono del tutor</string>
    <string name="txtScheduleLayout_hint">Horario</string>
    <string name="txtDayLayout_hint">Dia</string>
    <string name="txtStartTimeLayout_hint">Hora de inicio</string>
    <string name="txtEndTimeLayout_hint">Hora de fin</string>
    <string name="txtObservationsLayout_hint">Obseraciones</string>
    <string name="txtStudentLayout_hint">Alumno</string>
    <string name="txtCIFLayout_hint">CIF</string>
    <string name="txtAddressLayout_hint">Direccion</string>
    <string name="txtLogoLayout_hint">Url del logo</string>
    <string name="txtContactNameLayout_hint">Nombre del contacto</string>
    <string name="form_save">Save</string>
    <string name="lblTime">%s-%s</string>

    <string name="aboutMe_title">FCT APP</string>
    <string name="aboutMe_text_version">Version 1.0</string>
    <string name="aboutMe_aboutApp">Esta es una aplicacion para gestionar las visitas de a los alumnos que estan realizando la FCT</string>
    <string name="aboutMe_lblAboutMe">Acerca de mi</string>
    <string name="aboutMe_lblPhonenumber">672356782</string>
    <string name="aboutMe_lblFacebook">Fanstatian</string>
    <string name="abourMe_lblTwitter">\@Hagundurt</string>
    <!--preferences-->
    <string name="prefStartingScreen_defaultValue" translatable="false">nextVisits</string>
    <string name="prefStartingScreen_title">Pantalla principal</string>
    <string name="prefStartingScreen_key" translatable="false">prefStartingScreen</string>
    <string-array name="prefStartingScreen_entryValues" translatable="false">
        <item>companies</item>
        <item>students</item>
        <item>visits</item>
        <item>nextVisits</item>
    </string-array>
    <string-array name="prefStartingScreen_entries" translatable="false">
        <item>Empresas</item>
        <item>Alumnos</item>
        <item>Visitas</item>
        <item>Próximas visitas</item>
    </string-array>

    <string name="prefDaysVisits_key">prefDaysVisits</string>
    <string name="prefDaysVisits_title">Dias entre visitas</string>

    <string name="prefInfo_title">Acerca de</string>
    <string name="prefInfo_key">prefInfo</string>
    <string name="form_delete">delete</string>
    <string name="txtDay_value">%d/%d/%d</string>
    <string name="txtStartTime_value">%d:%d</string>
    <string name="txtEndTime_value">%d:%d</string>
    <string name="message_nextvisit_not_visit_yet">Hacer visita inicial</string>

</resources>
