<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/companiesFragment"
            android:icon="@drawable/ic_company_black_24dp"
            android:title="@string/companiesFragment_title"
            />
        <item
            android:id="@+id/studentsFragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/studentsFragment_title"
            />
        <item
            android:id="@+id/visitsFragment"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/visitsFragment_title"
            />
        <item
            android:id="@+id/nextVisitsFragment"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nextVisitsFragment_title"
            />
    </group>
    <group>
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settingsFragment_title"/>
    </group>
</menu>